log
Mon 13 Mar 2023 10:31:17 PM UTC: 
 exercises.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|7
total_score: 0/70
bde1fc2
Mon 13 Mar 2023 10:34:05 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|7
total_score: 0/70
21ea4ca
Mon 13 Mar 2023 10:34:43 PM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|6
total_score: 10/70
4991d73
Tue 14 Mar 2023 05:41:39 PM UTC: 
 exercises.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
c51dfb9
Tue 14 Mar 2023 06:04:44 PM UTC: 
 exercises.c | 8 ++++++++
 1 file changed, 8 insertions(+)
 tests:  3|4
total_score: 30/70
9a4a0d8
Wed 15 Mar 2023 02:31:54 PM UTC: 
 exercises.c | 10 +++++++++-
 1 file changed, 9 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:98:41: error: ‘*v.capacidad’ may be used uninitialized [-Werror=maybe-uninitialized]
   98 |   v->datos = (int *) realloc(v->datos, v->capacidad * sizeof(int));
      |                                        ~^~~~~~~~~~~
exercises.c:98:31: error: ‘*v.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
   98 |   v->datos = (int *) realloc(v->datos, v->capacidad * sizeof(int));
      |                              ~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
242b596
Wed 15 Mar 2023 02:49:21 PM UTC: 
 exercises.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:98:41: error: ‘*v.capacidad’ may be used uninitialized [-Werror=maybe-uninitialized]
   98 |   v->datos = (int *) realloc(v->datos, v->capacidad * sizeof(int));
      |                                        ~^~~~~~~~~~~
exercises.c:98:31: error: ‘*v.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
   98 |   v->datos = (int *) realloc(v->datos, v->capacidad * sizeof(int));
      |                              ~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
fe74fea
Wed 15 Mar 2023 02:50:18 PM UTC: 
 exercises.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
c6b643c
Wed 15 Mar 2023 02:54:48 PM UTC: 
 exercises.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:100:31: error: ‘*v.datos’ may be used uninitialized [-Werror=maybe-uninitialized]
  100 |   v->datos = (int *) realloc(v->datos, n * sizeof(int));
      |                              ~^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
80f2b9b
Wed 15 Mar 2023 02:55:04 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
13a8142
